# linkml-data-dictionary

./: .gitignore  AUTHORS  ChangeLog  MakeConfig  Makefile  README.md  data_dictionary.py  mkdocs.yml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yaml
data_ingestion_to_linkml/: json_to_linkml.py
data_ingestion_to_linkml/output_linkml_yaml/: data_dictionary_spreadsheet_1k2m4oAX3JdfYN2lIbpBiWFUNKZwXnQCiuns0e3Wid9o.yaml  data_dictionary_spreadsheet_1k2m4oAX3JdfYN2lIbpBiWFUNKZwXnQCiuns0e3Wid9o_20230405.yaml  data_dictionary_spreadsheet_1k2m4oAX3JdfYN2lIbpBiWFUNKZwXnQCiuns0e3Wid9o_v2.yaml  data_dictionary_spreadsheet_1sTygI0GtyaT2C0iZ9YzXTKRnAcELuV2BblaLGPG0EPc  data_dictionary_spreadsheet_1sTygI0GtyaT2C0iZ9YzXTKRnAcELuV2BblaLGPG0EPc.yaml
data_ingestion_to_linkml/test_json_data/: Aggregated.json  Master.json
data_validation/: gen3_person.json  gen3_person_w_bad_data.json
data_validation/validation_scripts/: validate_json_w_python.py
linkml_data_dictionary/data_ingestion_to_linkml/: json_to_linkml.py
linkml_data_dictionary/data_validation/: gen3_person.tsv  (+5 more)
markdown_model/: CP.md  CensorStatusEnum.md  CourseEnum.md  DataContributorIdEnum.md  EnrolledStatusEnum.md  FamilyMedicalHistory_subjects.md  HL.md  NBL.md  NPC.md  NamedThing.md  OS.md  Person.md  RB.md  RMS.md  SexEnum.md  StudyIdEnum.md  Subject.md  Timing.md  age_at_course_anc_500.md  age_at_course_end.md  age_at_cyle_end.md  course_number.md  data_contributor_id.md  disease_phase.md  disease_phase_number.md  efs_censor_status.md  ethnicity.md  prior_cancer.md  race.md  sex.md  subject__persons.md  subjects.md  timings.md  type.md
markdown_model_generated/: AdministrationSiteEnum.md  AdministrationStatusEnum.md  AdvancedDiseaseSignsEnum.md  AdverseEventEnum.md  AdverseEvents.md  AeAttributionEnum.md  AeExpectedEnum.md  AeGradeEnum.md  AeGradeSystemEnum.md  AeInterventionDetailEnum.md  AePathogenConfirmationEnum.md  AePathogenEnum.md  AliveDeadNotreportedUnknownEnum.md  AllTypeEnum.md  AllelicStateEnum.md  AltStatusEnum.md  AmputationTypeEnum.md  AnaplasiaExtentEnum.md  AnaplasiaTypeEnum.md  AssociatedConditionEnum.md  AvnJointLateralityEnum.md  AvnMethodEnum.md  BendamustineBleomycinBrentuximabvedotinBusulfanCarboplatinCarmustineCisplatinCyclophosphamideCytarabEnum.md  BiologicalAnalyteEnum.md  BiopsyAndSurgicalProcedures.md  BiopsyTypeEnum.md  BmAnalysisMethodAtResponseEnum.md  BmMorphologyEnum.md  BoneNotreportedSofttissueUnknownEnum.md  BoostDoseUnitEnum.md  CauseOfDeathDetailEnum.md  CauseOfDeathEnum.md  CellularImmunotherapy.md  CgeNotreportedUnknownCgyEnum.md  ChromosomalConsequenceEnum.md  CimtTypeEnum.md  ClassificationEnum.md  ClinicalSignsEnum.md  CnsDiseaseStatusEnum.md  CodeSystemEnum.md  (+711 more)
model/: CONFIG.yaml
python_model/: data_dictionary.py  data_dictionary_generated.py  data_dictionary_generated_fixed_quotes.py  data_dictionary_test.py
sql_ddl_generated/: create_schema.sql  create_schema_2.sql
(+475 files in other folders)
