[metadata]
name = data_dictionary
url = https://github.com/chicagopcdc/linkml-data-dictionary
author = Megan Moore
author_email = megan.moore@bsd.uchicago.edu (mm7148@uchicagomedicine.org)
summary = model of the pcdc data dictionary
description = model of the pcdc data dictionary
long_description = model of the pcdc data dictionary
home_page = https://chicagopcdc.github.io/data_dictionary
license = CC0 1.0 Universal
python_requires = >=3.7
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = 
    linkml
    LOD
    Modeling
    Linked open data
    model

[options]
include_package_data = True

[files]
packages =
    data_dictionary

data-files = data_dictionary/model = data_dictionary/model/*
    data_dictionary/jsonld_context = data_dictionary/jsonld_context/*
    data_dictionary/json_schema = data_dictionary/json_schema/*
    data_dictionary/model = data_dictionary/model/*


